src/parser/antlr4/JuanaParser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import JuanaListener from './JuanaListener.js';
import JuanaVisitor from './JuanaVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class JuanaParser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, "'='", "';'", "'deprecated'", "'?'", "':'", 
                            "'|'", "'{'", "'}'", "'('", "')'", "','", "'@'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, "SPACES", "ID", 
                             "STRING", "NUMBER" ];
    static ruleNames = [ "document", "id", "string", "number", "variable", 
                         "variable_value", "parameter", "parameter_type", 
                         "type", "type_parameters", "method", "method_parameters", 
                         "directive", "directive_parameters", "directive_body" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = JuanaParser.ruleNames;
        this.literalNames = JuanaParser.literalNames;
        this.symbolicNames = JuanaParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	document() {
	    let localctx = new DocumentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, JuanaParser.RULE_document);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 36;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 20488) !== 0)) {
	            this.state = 34;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 30;
	                this.variable();
	                break;

	            case 2:
	                this.state = 31;
	                this.directive();
	                break;

	            case 3:
	                this.state = 32;
	                this.type();
	                break;

	            case 4:
	                this.state = 33;
	                this.method();
	                break;

	            }
	            this.state = 38;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 39;
	        this.match(JuanaParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	id() {
	    let localctx = new IdContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, JuanaParser.RULE_id);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 41;
	        this.match(JuanaParser.ID);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string() {
	    let localctx = new StringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, JuanaParser.RULE_string);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 43;
	        this.match(JuanaParser.STRING);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	number() {
	    let localctx = new NumberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, JuanaParser.RULE_number);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 45;
	        this.match(JuanaParser.NUMBER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable() {
	    let localctx = new VariableContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, JuanaParser.RULE_variable);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 47;
	        localctx.name = this.id();
	        this.state = 48;
	        this.match(JuanaParser.T__0);
	        this.state = 49;
	        localctx.value = this.variable_value();
	        this.state = 50;
	        this.match(JuanaParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variable_value() {
	    let localctx = new Variable_valueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, JuanaParser.RULE_variable_value);
	    try {
	        this.state = 54;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 15:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 52;
	            this.string();
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 53;
	            this.number();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	parameter() {
	    let localctx = new ParameterContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, JuanaParser.RULE_parameter);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 57;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 56;
	            localctx.deprecated = this.match(JuanaParser.T__2);
	        }

	        this.state = 59;
	        localctx.name = this.id();
	        this.state = 61;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===4) {
	            this.state = 60;
	            localctx.optional = this.match(JuanaParser.T__3);
	        }

	        this.state = 63;
	        this.match(JuanaParser.T__4);
	        this.state = 64;
	        localctx.ptype = this.parameter_type();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	parameter_type() {
	    let localctx = new Parameter_typeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, JuanaParser.RULE_parameter_type);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 66;
	        this.id();
	        this.state = 71;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===6) {
	            this.state = 67;
	            this.match(JuanaParser.T__5);
	            this.state = 68;
	            this.id();
	            this.state = 73;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type() {
	    let localctx = new TypeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, JuanaParser.RULE_type);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 75;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 74;
	            localctx.deprecated = this.match(JuanaParser.T__2);
	        }

	        this.state = 77;
	        localctx.name = this.id();
	        this.state = 78;
	        this.match(JuanaParser.T__6);
	        this.state = 80;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3 || _la===14) {
	            this.state = 79;
	            localctx.parameters = this.type_parameters();
	        }

	        this.state = 82;
	        this.match(JuanaParser.T__7);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type_parameters() {
	    let localctx = new Type_parametersContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, JuanaParser.RULE_type_parameters);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 87; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 84;
	            this.parameter();
	            this.state = 85;
	            this.match(JuanaParser.T__1);
	            this.state = 89; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===3 || _la===14);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	method() {
	    let localctx = new MethodContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, JuanaParser.RULE_method);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 91;
	            localctx.deprecated = this.match(JuanaParser.T__2);
	        }

	        this.state = 94;
	        localctx.name = this.id();
	        this.state = 95;
	        this.match(JuanaParser.T__8);
	        this.state = 97;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3 || _la===14) {
	            this.state = 96;
	            localctx.parameters = this.method_parameters();
	        }

	        this.state = 99;
	        this.match(JuanaParser.T__9);
	        this.state = 102;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===5) {
	            this.state = 100;
	            this.match(JuanaParser.T__4);
	            this.state = 101;
	            localctx.result = this.parameter_type();
	        }

	        this.state = 104;
	        this.match(JuanaParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	method_parameters() {
	    let localctx = new Method_parametersContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, JuanaParser.RULE_method_parameters);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 106;
	        this.parameter();
	        this.state = 111;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===11) {
	            this.state = 107;
	            this.match(JuanaParser.T__10);
	            this.state = 108;
	            this.parameter();
	            this.state = 113;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	directive() {
	    let localctx = new DirectiveContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, JuanaParser.RULE_directive);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this.match(JuanaParser.T__11);
	        this.state = 115;
	        localctx.name = this.id();
	        this.state = 117;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & 114688) !== 0)) {
	            this.state = 116;
	            localctx.parameters = this.directive_parameters();
	        }

	        this.state = 125;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 7:
	            this.state = 119;
	            this.match(JuanaParser.T__6);
	            this.state = 121;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===14) {
	                this.state = 120;
	                localctx.body = this.directive_body();
	            }

	            this.state = 123;
	            this.match(JuanaParser.T__7);
	            break;
	        case 2:
	            this.state = 124;
	            this.match(JuanaParser.T__1);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	directive_parameters() {
	    let localctx = new Directive_parametersContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, JuanaParser.RULE_directive_parameters);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 130; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 130;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 14:
	                this.state = 127;
	                this.id();
	                break;
	            case 15:
	                this.state = 128;
	                this.string();
	                break;
	            case 16:
	                this.state = 129;
	                this.number();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 132; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & 114688) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	directive_body() {
	    let localctx = new Directive_bodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, JuanaParser.RULE_directive_body);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 134;
	            this.variable();
	            this.state = 137; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===14);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

JuanaParser.EOF = antlr4.Token.EOF;
JuanaParser.T__0 = 1;
JuanaParser.T__1 = 2;
JuanaParser.T__2 = 3;
JuanaParser.T__3 = 4;
JuanaParser.T__4 = 5;
JuanaParser.T__5 = 6;
JuanaParser.T__6 = 7;
JuanaParser.T__7 = 8;
JuanaParser.T__8 = 9;
JuanaParser.T__9 = 10;
JuanaParser.T__10 = 11;
JuanaParser.T__11 = 12;
JuanaParser.SPACES = 13;
JuanaParser.ID = 14;
JuanaParser.STRING = 15;
JuanaParser.NUMBER = 16;

JuanaParser.RULE_document = 0;
JuanaParser.RULE_id = 1;
JuanaParser.RULE_string = 2;
JuanaParser.RULE_number = 3;
JuanaParser.RULE_variable = 4;
JuanaParser.RULE_variable_value = 5;
JuanaParser.RULE_parameter = 6;
JuanaParser.RULE_parameter_type = 7;
JuanaParser.RULE_type = 8;
JuanaParser.RULE_type_parameters = 9;
JuanaParser.RULE_method = 10;
JuanaParser.RULE_method_parameters = 11;
JuanaParser.RULE_directive = 12;
JuanaParser.RULE_directive_parameters = 13;
JuanaParser.RULE_directive_body = 14;

class DocumentContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_document;
    }

	EOF() {
	    return this.getToken(JuanaParser.EOF, 0);
	};

	variable = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(VariableContext);
	    } else {
	        return this.getTypedRuleContext(VariableContext,i);
	    }
	};

	directive = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(DirectiveContext);
	    } else {
	        return this.getTypedRuleContext(DirectiveContext,i);
	    }
	};

	type = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(TypeContext);
	    } else {
	        return this.getTypedRuleContext(TypeContext,i);
	    }
	};

	method = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(MethodContext);
	    } else {
	        return this.getTypedRuleContext(MethodContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterDocument(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitDocument(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitDocument(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class IdContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_id;
    }

	ID() {
	    return this.getToken(JuanaParser.ID, 0);
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterId(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitId(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitId(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class StringContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_string;
    }

	STRING() {
	    return this.getToken(JuanaParser.STRING, 0);
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterString(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitString(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitString(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class NumberContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_number;
    }

	NUMBER() {
	    return this.getToken(JuanaParser.NUMBER, 0);
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterNumber(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitNumber(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitNumber(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class VariableContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_variable;
        this.name = null; // IdContext
        this.value = null; // Variable_valueContext
    }

	id() {
	    return this.getTypedRuleContext(IdContext,0);
	};

	variable_value() {
	    return this.getTypedRuleContext(Variable_valueContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterVariable(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitVariable(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitVariable(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Variable_valueContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_variable_value;
    }

	string() {
	    return this.getTypedRuleContext(StringContext,0);
	};

	number() {
	    return this.getTypedRuleContext(NumberContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterVariable_value(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitVariable_value(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitVariable_value(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ParameterContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_parameter;
        this.deprecated = null; // Token
        this.name = null; // IdContext
        this.optional = null; // Token
        this.ptype = null; // Parameter_typeContext
    }

	id() {
	    return this.getTypedRuleContext(IdContext,0);
	};

	parameter_type() {
	    return this.getTypedRuleContext(Parameter_typeContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterParameter(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitParameter(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitParameter(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Parameter_typeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_parameter_type;
    }

	id = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(IdContext);
	    } else {
	        return this.getTypedRuleContext(IdContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterParameter_type(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitParameter_type(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitParameter_type(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class TypeContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_type;
        this.deprecated = null; // Token
        this.name = null; // IdContext
        this.parameters = null; // Type_parametersContext
    }

	id() {
	    return this.getTypedRuleContext(IdContext,0);
	};

	type_parameters() {
	    return this.getTypedRuleContext(Type_parametersContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterType(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitType(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitType(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Type_parametersContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_type_parameters;
    }

	parameter = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ParameterContext);
	    } else {
	        return this.getTypedRuleContext(ParameterContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterType_parameters(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitType_parameters(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitType_parameters(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class MethodContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_method;
        this.deprecated = null; // Token
        this.name = null; // IdContext
        this.parameters = null; // Method_parametersContext
        this.result = null; // Parameter_typeContext
    }

	id() {
	    return this.getTypedRuleContext(IdContext,0);
	};

	method_parameters() {
	    return this.getTypedRuleContext(Method_parametersContext,0);
	};

	parameter_type() {
	    return this.getTypedRuleContext(Parameter_typeContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterMethod(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitMethod(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitMethod(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Method_parametersContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_method_parameters;
    }

	parameter = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ParameterContext);
	    } else {
	        return this.getTypedRuleContext(ParameterContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterMethod_parameters(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitMethod_parameters(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitMethod_parameters(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class DirectiveContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_directive;
        this.name = null; // IdContext
        this.parameters = null; // Directive_parametersContext
        this.body = null; // Directive_bodyContext
    }

	id() {
	    return this.getTypedRuleContext(IdContext,0);
	};

	directive_parameters() {
	    return this.getTypedRuleContext(Directive_parametersContext,0);
	};

	directive_body() {
	    return this.getTypedRuleContext(Directive_bodyContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterDirective(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.exitDirective(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof JuanaVisitor ) {
	        return visitor.visitDirective(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Directive_parametersContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = JuanaParser.RULE_directive_parameters;
    }

	id = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(IdContext);
	    } else {
	        return this.getTypedRuleContext(IdContext,i);
	    }
	};

	string = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(StringContext);
	    } else {
	        return this.getTypedRuleContext(StringContext,i);
	    }
	};

	number = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(NumberContext);
	    } else {
	        return this.getTypedRuleContext(NumberContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof JuanaListener ) {
	        listener.enterDirective_parameters(this);
		}
	}
